modificando pagina raiz

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
 <ul>
-  <li>{{curso}}</li>
-  <li>Alumnno: {{estudiante}}</li>
+  <li>{{frontend}}</li>
+  <li>Nombre del desarrollador: {{dev}}</li>
 </ul>
