--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>{{title}}</h1>
-<ul>
-  <li>{{frontend}}</li>
-  <li>Nombre del desarrollador: {{dev}}</li>
-</ul>
+<div class="container">
+
+  <router-outlet></router-outlet>
+
+</div>
