--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -2,6 +2,11 @@
     <div class="card-header">Usuarios</div>
     <div class="card-body">
       <h5 class="card-title">Lista usuarios registrados</h5>
+      
+      <div class="my-2 text-left">
+        <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/cliente/form']" routerLinkActive="router-link-active" >Registrar cliente</button>
+      </div>
+
       <table class="table table-bordered table-striped">
         <thead>
             <tr>
