--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -15,6 +15,7 @@
                 <th>Apellido Paterno</th>
                 <th>Apellido Materno</th>
                 <th>Identificacion</th>
+                <th>Editar</th>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +25,9 @@
                 <td>{{cliente.apellidoPaterno}}</td>
                 <td>{{cliente.apellidoMaterno}}</td>
                 <td>{{cliente.identificacion}}</td>
+                <td>
+                  <button type="button" name="button" [routerLink]="['/cliente/form',cliente.id]" class="btn btn-primary">Editar</button>
+                </td>
             </tr>     
         </tbody>
       </table>
