arreglando boton registrar y añadir update

--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -4,7 +4,7 @@
       <h5 class="card-title">Lista usuarios registrados</h5>
       
       <div class="my-2 text-left">
-        <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/cliente/form']" routerLinkActive="router-link-active" >Registrar cliente</button>
+        <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/cliente/form']" routerLinkActive="router-link-active" >Registrar usuario</button>
       </div>
 
       <table class="table table-bordered table-striped">
