--- a/src/app/cliente/form.component.html
+++ b/src/app/cliente/form.component.html
@@ -52,7 +52,10 @@
             </div>
             <div class="form-group row">
                 <div class="col-sm-6">
-                    <button class="btn btn-primary" role="button" [disabled]="!clienteForm.form.valid">Registrar</button>
+                    <button class="btn btn-primary" role="button" (click)="create()" *ngIf="!cliente.id; else elseBlock" [disabled]="!clienteForm.form.valid">Registrar</button>
+                    <ng-template #elseBlock>
+                        <button class="btn btn-primary" role="button" (click)='update()' [disabled]="!clienteForm.form.valid">Editar</button>
+                    </ng-template>
                 </div>
             </div>
         </form>
